Fixed scrollbar for prompts and finetune table

--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,6 @@ textarea {
 }
 
 .conversation {
-	height: 500px;
+	max-height: 500px;
 }
 
